@@ -7,28 +7,28 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.5 (gritter) 7/17/06";
+	"@(#)/usr/ucb/otfdump.sl	7.6 (gritter) 7/17/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.5 (gritter) 7/17/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.5 (gritter) 7/17/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.6 (gritter) 7/17/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.6 (gritter) 7/17/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.5 (gritter) 7/17/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.6 (gritter) 7/17/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.5 (gritter) 7/17/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.6 (gritter) 7/17/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.5";
+const char revision[] = "7.6";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.56 (gritter) 7/17/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 n1.c: * Sccsid @(#)n1.c	1.83 (gritter) 7/16/06
 n2.c: * Sccsid @(#)n2.c	1.22 (gritter) 7/3/06
-n3.c: * Sccsid @(#)n3.c	1.104 (gritter) 7/17/06
+n3.c: * Sccsid @(#)n3.c	1.105 (gritter) 7/17/06
 n4.c: * Sccsid @(#)n4.c	1.35 (gritter) 7/17/06
 n5.c: * Sccsid @(#)n5.c	1.54 (gritter) 7/17/06
 n7.c: * Sccsid @(#)n7.c	1.76 (gritter) 7/17/06
 n8.c: * Sccsid @(#)n8.c	1.28 (gritter) 7/4/06
-n9.c: * Sccsid @(#)n9.c	1.46 (gritter) 7/3/06
+n9.c: * Sccsid @(#)n9.c	1.47 (gritter) 7/17/06
 ni.c: * Sccsid @(#)ni.c	1.31 (gritter) 7/17/06
 nii.c: * Sccsid @(#)nii.c	1.35 (gritter) 7/11/06
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
